Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-06-25 Kimmo
 PATCH: [ 1737491 ] Italian resource file for 2.7.3.7
  Submitted by Andrea Decorte
  Src/Languages/Italian: MergeItalian.rc
 BUG: [ 1698781 ] [LineDiff] Whitespace differences not highlighted
  Fix from Gal
  Src: stringdiffs.cpp stringdiffsi.h

2007-06-16 Jochen
 PATCH: [ 1734439 ] Fix Bug #1723263 "Zip --> Both" operation give unwanted content in output
  Src: 7zCommon.cpp

2007-06-13 Kimmo
 PATCH: [ 1736520 ] WinMerge Large Toolbar Icons - small update
  Submitted by Alexander Skinner
  Src/res: ToolbarDisabled32.bmp ToolbarEnabled32.bmp

2007-06-13 WinMerge experimental release 2.7.3.7 (SVN revision 4330)

2007-06-13 Kimmo
 PATCH: [ 1735635 ] Swedish WinMerge 2.7.3.6 translation update
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc
 PATCH: [ 1736520 ] WinMerge Large Toolbar Icons
  Submitted by Alexander Skinner
  Src: MainFrm.cpp
  Src/res: ToolbarDisabled32.bmp ToolbarEnabled32.bmp

2007-06-12 Takashi
 BUG: [ 1730534 ] Cannot copy unique items in 2.7.3.5 (3)
  Src: DirActions.cpp
 PATCH: [ 1727722 ] Remove AppSerialize (only used for fonts)(3)
  Src: MainFrm.cpp

2007-06-08 Takashi
 BUG: [ 1730534 ] Cannot copy unique items in 2.7.3.5 - additional fix for deleting(2)
  Src: DirActions.cpp
 PATCH: [ 1727722 ] Remove AppSerialize (only used for fonts)(2)
  Src: MainFrm.cpp

2007-06-07 WinMerge experimental release 2.7.3.6 (SVN revision 4321)

2007-06-07 Kimmo
 BUG: [ 1730534 ] Cannot copy unique items in 2.7.3.5 - additional fix for deleting
  Src: DirActions.cpp
 TODO: [ 1718040 ] Import existing linefilter to new dialog
  Src: LineFiltersList.cpp LineFiltersList.h MainFrm.cpp

2007-06-06 Kimmo
 Apply Recent projects (patch #1731551) menuitem to languages
  Src/Languages/*: Merge*.rc
 BUG: [ 1730534 ] Cannot copy unique items in 2.7.3.5
  Src: DirActions.cpp

2007-06-05 Dean