@@ -54,6 +54,8 @@ static LPTSTR s_apszBatKeywordList[] =
     _T ("DATE"),
     _T ("DEFAULT"),
     _T ("DEFINED"),
+    _T ("DDEEXEC"),
+    _T ("DEBUGSTRING"),
     _T ("DEL"),
     _T ("DELAY"),
     _T ("DESCRIBE"),
@@ -70,6 +72,7 @@ static LPTSTR s_apszBatKeywordList[] =
     _T ("ECHOERR"),
     _T ("ECHOS"),
     _T ("ECHOSERR"),
+    _T ("EJECTMEDIA"),
     _T ("ELSE"),
     _T ("ELSEIFF"),
     _T ("ENDDO"),
@@ -111,6 +114,7 @@ static LPTSTR s_apszBatKeywordList[] =
     _T ("IN"),
     _T ("INKEY"),
     _T ("INPUT"),
+    _T ("JABBER"),
     _T ("ISALIAS"),
     _T ("ISAPP"),
     _T ("ISDIR"),
@@ -144,13 +148,17 @@ static LPTSTR s_apszBatKeywordList[] =
     _T ("NOT"),
     _T ("ON"),
     _T ("OPTION"),
+    _T ("OSD"),
     _T ("PATH"),
     _T ("PAUSE"),
     _T ("PDIR"),
     _T ("PLAYAVI"),
     _T ("PLAYSOUND"),
+    _T ("PLUGIN"),
     _T ("POPD"),
+    _T ("POSTMSG"),
     _T ("PRINT"),
+    _T ("PRIORITY"),
     _T ("PROMPT"),
     _T ("PUSHD"),
     _T ("QUERYBOX"),
@@ -162,7 +170,9 @@ static LPTSTR s_apszBatKeywordList[] =
     _T ("REN"),
     _T ("RENAME"),
     _T ("RETURN"),
+    _T ("REXEC"),
     _T ("RMDIR"),
+    _T ("RSHELL"),
     _T ("SCREEN"),
     _T ("SCRPUT"),
     _T ("SELECT"),
@@ -174,13 +184,16 @@ static LPTSTR s_apszBatKeywordList[] =
     _T ("SHORTCUT"),
     _T ("SHRALIAS"),
     _T ("SMPP"),
+    _T ("SNMP"),
     _T ("SNPP"),
     _T ("START"),
     _T ("SWAPPING"),
     _T ("SWITCH"),
+    _T ("SYNC"),
     _T ("TAIL"),
     _T ("TASKEND"),
     _T ("TASKLIST"),
+    _T ("TCTOOLBAR"),
     _T ("TEE"),
     _T ("TEXT"),
     _T ("THEN"),
@@ -188,6 +201,7 @@ static LPTSTR s_apszBatKeywordList[] =
     _T ("TIMER"),
     _T ("TITLE"),
     _T ("TOUCH"),
+    _T ("TRANSIENT"),
     _T ("TREE"),
     _T ("TRUENAME"),
     _T ("TYPE"),
@@ -203,6 +217,7 @@ static LPTSTR s_apszBatKeywordList[] =
     _T ("WHICH"),
     _T ("WHILE"),
     _T ("WINDOW"),
+    _T ("WMIQUERY"),
     _T ("Y"),
     NULL
   };
@@ -281,11 +296,20 @@ static LPTSTR s_apszUser1KeywordList[] =
 static LPTSTR s_apszUser2KeywordList[] =
   {
     _T ("@ABS"),
+    _T ("@AFSCELL"),
+    _T ("@AFSMOUNT"),
+    _T ("@AFSPATH"),
+    _T ("@AFSSYMLINK"),
+    _T ("@AFSVOLID"),
+    _T ("@AFSVOLNAME"),
     _T ("@AGEDATE"),
     _T ("@ALIAS"),
     _T ("@ALTNAME"),
     _T ("@ASCII"),
+    _T ("@ASSOC"),
     _T ("@ATTRIB"),
+    _T ("@AVERAGE"),
+    _T ("@CAPI"),
     _T ("@CAPS"),
     _T ("@CDROM"),
     _T ("@CEILING"),
@@ -294,9 +318,13 @@ static LPTSTR s_apszUser2KeywordList[] =
     _T ("@CLIPW"),
     _T ("@COLOR"),
     _T ("@COMMA"),
+    _T ("@COMPARE"),
     _T ("@CONSOLE"),
     _T ("@CONVERT"),
+    _T ("@COUNT"),
     _T ("@CRC32"),
+    _T ("@CWD"),
+    _T ("@CWDS"),
     _T ("@DATE"),
     _T ("@DAY"),
     _T ("@DEC"),
@@ -308,12 +336,15 @@ static LPTSTR s_apszUser2KeywordList[] =
     _T ("@DISKFREE"),
     _T ("@DISKTOTAL"),
     _T ("@DISKUSED"),
+    _T ("@DOMAIN"),
     _T ("@DOSMEM"),
     _T ("@DOW"),
     _T ("@DOWF"),
     _T ("@DOWI"),
     _T ("@DOY"),
     _T ("@EMS"),
+    _T ("@DRIVETYPE"),
+    _T ("@DRIVETYPEEX"),
     _T ("@ENUMSERVERS"),
     _T ("@ENUMSHARES"),
     _T ("@ERRTEXT"),
@@ -346,11 +377,13 @@ static LPTSTR s_apszUser2KeywordList[] =
     _T ("@FORMAT"),
     _T ("@FORMATN"),
     _T ("@FSTYPE"),
+    _T ("@FTYPE"),
     _T ("@FULL"),
     _T ("@FUNCTION"),
     _T ("@GETDIR"),
     _T ("@GETFILE"),
     _T ("@GETFOLDER"),
+    _T ("@GROUP"),
     _T ("@HISTORY"),
     _T ("@IDOW"),
     _T ("@IDOWF"),
@@ -359,6 +392,7 @@ static LPTSTR s_apszUser2KeywordList[] =
     _T ("@INDEX"),
     _T ("@INIREAD"),
     _T ("@INIWRITE"),
+    _T ("@INODE"),
     _T ("@INSERT"),
     _T ("@INSTR"),
     _T ("@INT"),
@@ -373,12 +407,15 @@ static LPTSTR s_apszUser2KeywordList[] =
     _T ("@ISPUNCT"),
     _T ("@ISSPACE"),
     _T ("@ISXDIGIT"),
+    _T ("@JUNCTION"),
     _T ("@LABEL"),
+    _T ("@LCS"),
     _T ("@LEFT"),
     _T ("@LEN"),
     _T ("@LFN"),
     _T ("@LINE"),
     _T ("@LINES"),
+    _T ("@LINKS"),
     _T ("@LOWER"),
     _T ("@LPT"),
     _T ("@LTRIM"),
@@ -393,13 +430,20 @@ static LPTSTR s_apszUser2KeywordList[] =
     _T ("@NAME"),
     _T ("@NUMERIC"),
     _T ("@OPTION"),
+    _T ("@OWNER"),
     _T ("@PATH"),
+    _T ("@PERL"),
+    _T ("@PING"),
+    _T ("@QUOTE"),
     _T ("@RANDOM"),
     _T ("@READSCR"),
     _T ("@READY"),
     _T ("@REGCREATE"),
     _T ("@REGDELKEY"),
+    _T ("@REGEX"),
+    _T ("@REGEXINDEX"),
     _T ("@REGEXIST"),
+    _T ("@REGEXSUB"),
     _T ("@REGQUERY"),
     _T ("@REGSET"),
     _T ("@REGSETENV"),
@@ -407,41 +451,63 @@ static LPTSTR s_apszUser2KeywordList[] =
     _T ("@REMOVABLE"),
     _T ("@REPEAT"),
     _T ("@REPLACE"),
+    _T ("@REVERSE"),
     _T ("@REXX"),
     _T ("@RIGHT"),
     _T ("@RTRIM"),
+    _T ("@RUBY"),
+    _T ("@SCRIPT"),
     _T ("@SEARCH"),
     _T ("@SELECT"),
+    _T ("@SERIAL"),
     _T ("@SFN"),
+    _T ("@SHA1"),
+    _T ("@SHA256"),
+    _T ("@SHA384"),
+    _T ("@SHA512"),
+    _T ("@SIMILAR"),
+    _T ("@SNAPSHOT"),
     _T ("@STRIP"),
     _T ("@SUBST"),
     _T ("@SUBSTR"),
+    _T ("@SUMMARY"),
+    _T ("@SYMLINK"),
     _T ("@TIME"),
     _T ("@TIMER"),
     _T ("@TRIM"),
     _T ("@TRUENAME"),
+    _T ("@TRUNCATE"),
     _T ("@UNC"),
     _T ("@UNICODE"),
     _T ("@UNIQUE"),
+    _T ("@UNQUOTE"),
+    _T ("@UNQUOTES"),
     _T ("@UPPER"),
     _T ("@VERINFO"),
     _T ("@WATTRIB"),
     _T ("@WILD"),
+    _T ("@WINAPI"),
     _T ("@WINCLASS"),
     _T ("@WINEXENAME"),
     _T ("@WININFO"),
     _T ("@WINMEMORY"),
     _T ("@WINMETRICS"),
+    _T ("@WINPOS"),
     _T ("@WINSTATE"),
     _T ("@WINSYSTEM"),
+    _T ("@WMI"),
     _T ("@WORD"),
     _T ("@WORDS"),
+    _T ("@WORKGROUP"),
     _T ("@XMS"),
+    _T ("@XMLPATH"),
     _T ("@YEAR"),
     _T ("_"),
     _T ("_4VER"),
     _T ("_ACSTATUS"),
+    _T ("_AFSWCELL"),
     _T ("_ALIAS"),
+    _T ("_ALT"),
     _T ("_ANSI"),
     _T ("_APMAC"),
     _T ("_APMBATT"),
@@ -453,13 +519,17 @@ static LPTSTR s_apszUser2KeywordList[] =
     _T ("_BATTERY"),
     _T ("_BATTERYLIFE"),
     _T ("_BATTERYPERCENT"),
+    _T ("_BDEBUGGER"),
     _T ("_BG"),
     _T ("_BOOT"),
     _T ("_BUILD"),
     _T ("_CAPSLOCK"),
+    _T ("_CDROMS"),
     _T ("_CHILDPID"),
     _T ("_CI"),
+    _T ("_CMDLINE"),
     _T ("_CMDPROC"),
+    _T ("_CMDSPEC"),
     _T ("_CO"),
     _T ("_CODEPAGE"),
     _T ("_COLUMN"),
@@ -473,6 +543,7 @@ static LPTSTR s_apszUser2KeywordList[] =
     _T ("_CWP"),
     _T ("_CWPS"),
     _T ("_DATE"),
+    _T ("_DATETIME"),
     _T ("_DAY"),
     _T ("_DETACHPID"),
     _T ("_DISK"),
@@ -484,17 +555,28 @@ static LPTSTR s_apszUser2KeywordList[] =
     _T ("_DOWI"),
     _T ("_DOY"),
     _T ("_DPMI"),
+    _T ("_DRIVES"),
+    _T ("_DST"),
     _T ("_DV"),
+    _T ("_DVDS"),
     _T ("_ECHO"),
+    _T ("_EDITMODE"),
     _T ("_ENV"),
+    _T ("_EXECSTR"),
+    _T ("_EXIT"),
+    _T ("_EXPANSION"),
     _T ("_FG"),
     _T ("_FTPERROR"),
+    _T ("_HDRIVES"),
     _T ("_HLOGFILE"),
     _T ("_HOST"),
     _T ("_HOUR"),
     _T ("_HWPROFILE"),
+    _T ("_IDLETICKS"),
     _T ("_IDOW"),
     _T ("_IDOWF"),
+    _T ("_IFTP"),
+    _T ("_IFTPS"),
     _T ("_IMONTH"),
     _T ("_IMONTHF"),
     _T ("_ININAME"),
@@ -514,11 +596,15 @@ static LPTSTR s_apszUser2KeywordList[] =
     _T ("_MOUSE"),
     _T ("_NDP"),
     _T ("_NUMLOCK"),
+    _T ("_OPENAFS"),
+    _T ("_OSBUILD"),
     _T ("_PID"),
     _T ("_PIPE"),
     _T ("_PPID"),
     _T ("_RALT"),
     _T ("_RCTRL"),
+    _T ("_READY"),
+    _T ("_REGISTERED"),
     _T ("_ROW"),
     _T ("_ROWS"),
     _T ("_RSHIFT"),
@@ -526,16 +612,26 @@ static LPTSTR s_apszUser2KeywordList[] =
     _T ("_SECOND"),
     _T ("_SELECTED"),
     _T ("_SHELL"),
+    _T ("_SHELLS"),
     _T ("_SHIFT"),
     _T ("_SHRALIAS"),
     _T ("_STARTPATH"),
     _T ("_STARTPID"),
+    _T ("_STDERR"),
+    _T ("_STDIN"),
+    _T ("_STDOUT"),
+    _T ("_STZN"),
+    _T ("_STZO"),
     _T ("_SWAPPING"),
     _T ("_SYSERR"),
     _T ("_TIME"),
     _T ("_TRANSIENT"),
+    _T ("_TZN"),
+    _T ("_TZO"),
     _T ("_UNICODE"),
     _T ("_VIDEO"),
+    _T ("_VIRTUALPC"),
+    _T ("_VMWARE"),
     _T ("_WIN"),
     _T ("_WINDIR"),
     _T ("_WINFGWINDOW"),
@@ -545,6 +641,7 @@ static LPTSTR s_apszUser2KeywordList[] =
     _T ("_WINTITLE"),
     _T ("_WINUSER"),
     _T ("_WINVER"),
+    _T ("_WOW64"),
     _T ("_XPIXELS"),
     _T ("_YEAR"),
     _T ("_YPIXELS"),
@@ -822,7 +919,7 @@ out:
                 {
                   DEFINE_BLOCK (nIdentBegin, COLORINDEX_PREPROCESSOR);
                 }
-              else 
+              else
                 {
                   if (dwCookie & COOKIE_EXT_COMMENT)
                     {
