@@ -2,6 +2,11 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2007-06-26 Kimmo
+ PATCH: [ 1743504 ] new keywords (cleaned up)
+  Submitted by Andre Arpin
+  editlib: batch.cpp
+
 2007-06-25 Kimmo
  PATCH: [ 1737491 ] Italian resource file for 2.7.3.7
   Submitted by Andrea Decorte
